Archive2/3f/70e4001c312178/output
main.cpp:2:22: error: expected expression
    int *p = new int[]();   
                     ^
1 error generated.
