Archive2/3f/70e4001c312178/main.cpp
int main() {
    int *p = new int[]();   
}